implements activate user(DONE) and generate token (WIP)
